--- a/index.html
+++ b/index.html
@@ -1,116 +1,184 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8"/>
-  <title>🔴 Xem 4 Livestream YouTube + Chat | TrocTV</title>
-  <style>
-    body {
-      background: #111;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
+<meta charset="utf-8"/>
+<title>🔴 Xem 4 Livestream YouTube + Chat | TrocTV</title>
+<style>
+  body {
+    background: #111;
+    color: #eee;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+  }
+  h1 { color: crimson; }
+  input {
+    width: 80%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    border: none;
+  }
+  button {
+    padding: 8px 16px;
+    background: #e91e63;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    margin: 5px;
+  }
+  iframe {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+  }
+  .focus-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .live-box {
+    flex: 1 1 45%;
+    background: #222;
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    position: relative;
+  }
+  .live-box.focused {
+    flex: 2 1 65%;
+  }
+  .live-box.minimized {
+    flex: 1 1 25%;
+    max-width: 300px;
+  }
+
+  /* PHÓNG TO IFRAME khi khung được phóng to */
+  .live-box.focused iframe:nth-of-type(1) {
+    height: 400px !important;
+  }
+  .live-box.focused iframe:nth-of-type(2) {
+    height: 500px !important;
+  }
+
+  /* Chiều cao mặc định */
+  .live-box iframe:nth-of-type(1) {
+    height: 200px;
+  }
+  .live-box iframe:nth-of-type(2) {
+    height: 300px;
+  }
+
+  @media (max-width: 768px) {
+    .focus-container {
+      flex-direction: column;
     }
-    h1 {
-      color: crimson;
+    .live-box {
+      flex: 1 1 100%;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .box {
-      background: #222;
-      padding: 10px;
-      border-radius: 12px;
-    }
-    input {
-      width: 80%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      border: none;
-    }
-    button {
-      padding: 8px 16px;
-      background: #e91e63;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    iframe {
-      width: 100%;
-      border: none;
-      border-radius: 10px;
-      margin-top: 10px;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
+<h1>📺 Xem 4 Livestream + Chat - TrocTV</h1>
+<div style="text-align:center; margin-top:20px; font-family:Arial, sans-serif;">
+  <div style="font-size:16px; color:#aaa;">Được tạo bởi</div>
+  <div style="font-size:36px; font-weight:bold; font-family:'Bebas Neue', Impact, sans-serif; color:#e53935;">
+    TRẦM CHÍ THÀNH
+  </div>
+</div>
 
-  <h1>📺 Xem 4 Livestream + Chat - TrocTV</h1>
-
-  <!-- Tiêu đề Trầm Chí Thành -->
-  <div style="text-align:center; margin-top:20px; font-family:Arial, sans-serif;">
-    <div style="font-size:16px; color:#aaa;">Được tạo bởi</div>
-    <div style="font-size:36px; font-weight:bold; font-family:'Bebas Neue', Impact, sans-serif; color:#e53935;">
-      TRẦM CHÍ THÀNH
+<div class="focus-container">
+  <!-- LIVESTREAM 1 -->
+  <div class="live-box">
+    <input id="link1" placeholder="Link livestream 1"/>
+    <button onclick="loadEmbed(1)">Nhúng</button><br/>
+    <div class="action-buttons">
+      <button onclick="focusStream(this.parentElement.parentElement)">Phóng to</button>
+      <button onclick="resetFocus()">Thu nhỏ</button>
     </div>
+    <iframe id="video1"></iframe>
+    <iframe id="chat1"></iframe>
   </div>
 
-  <!-- Khung nhập livestream -->
-  <div class="grid">
-    <div class="box">
-      <input id="link1" placeholder="Link livestream 1"/>
-      <button onclick="loadEmbed(1)">Nhúng</button><br/>
-      <iframe id="video1" height="200"></iframe>
-      <iframe id="chat1" height="300"></iframe>
+  <!-- LIVESTREAM 2 -->
+  <div class="live-box">
+    <input id="link2" placeholder="Link livestream 2"/>
+    <button onclick="loadEmbed(2)">Nhúng</button><br/>
+    <div class="action-buttons">
+      <button onclick="focusStream(this.parentElement.parentElement)">Phóng to</button>
+      <button onclick="resetFocus()">Thu nhỏ</button>
     </div>
-
-    <div class="box">
-      <input id="link2" placeholder="Link livestream 2"/>
-      <button onclick="loadEmbed(2)">Nhúng</button><br/>
-      <iframe id="video2" height="200"></iframe>
-      <iframe id="chat2" height="300"></iframe>
-    </div>
-
-    <div class="box">
-      <input id="link3" placeholder="Link livestream 3"/>
-      <button onclick="loadEmbed(3)">Nhúng</button><br/>
-      <iframe id="video3" height="200"></iframe>
-      <iframe id="chat3" height="300"></iframe>
-    </div>
-
-    <div class="box">
-      <input id="link4" placeholder="Link livestream 4"/>
-      <button onclick="loadEmbed(4)">Nhúng</button><br/>
-      <iframe id="video4" height="200"></iframe>
-      <iframe id="chat4" height="300"></iframe>
-    </div>
+    <iframe id="video2"></iframe>
+    <iframe id="chat2"></iframe>
   </div>
 
-  <script>
-    function extractVideoId(url) {
-      const regex = /(?:v=|\/)([0-9A-Za-z_-]{11})/;
-      const match = url.match(regex);
-      return match ? match[1] : null;
-    }
+  <!-- LIVESTREAM 3 -->
+  <div class="live-box">
+    <input id="link3" placeholder="Link livestream 3"/>
+    <button onclick="loadEmbed(3)">Nhúng</button><br/>
+    <div class="action-buttons">
+      <button onclick="focusStream(this.parentElement.parentElement)">Phóng to</button>
+      <button onclick="resetFocus()">Thu nhỏ</button>
+    </div>
+    <iframe id="video3"></iframe>
+    <iframe id="chat3"></iframe>
+  </div>
 
-    function loadEmbed(num) {
-      const link = document.getElementById("link" + num).value;
-      const id = extractVideoId(link);
-      if (!id) {
-        alert("Link sai hoặc thiếu ID");
-        return;
-      }
-      document.getElementById("video" + num).src = `https://www.youtube.com/embed/${id}?autoplay=1`;
-      document.getElementById("chat" + num).src = `https://www.youtube.com/live_chat?v=${id}&embed_domain=${location.hostname}`;
-    }
-  </script>
+  <!-- LIVESTREAM 4 -->
+  <div class="live-box">
+    <input id="link4" placeholder="Link livestream 4"/>
+    <button onclick="loadEmbed(4)">Nhúng</button><br/>
+    <div class="action-buttons">
+      <button onclick="focusStream(this.parentElement.parentElement)">Phóng to</button>
+      <button onclick="resetFocus()">Thu nhỏ</button>
+    </div>
+    <iframe id="video4"></iframe>
+    <iframe id="chat4"></iframe>
+  </div>
+</div>
 
+<script>
+function extractVideoId(url) {
+  const regex = /(?:v=|\/)([0-9A-Za-z_-]{11})/;
+  const match = url.match(regex);
+  return match ? match[1] : null;
+}
+
+function loadEmbed(num) {
+  const link = document.getElementById("link" + num).value;
+  const id = extractVideoId(link);
+  if (!id) {
+    alert("Link sai hoặc thiếu ID");
+    return;
+  }
+  document.getElementById("video" + num).src = `https://www.youtube.com/embed/${id}?autoplay=1`;
+  document.getElementById("chat" + num).src = `https://www.youtube.com/live_chat?v=${id}&embed_domain=${location.hostname}`;
+}
+
+function focusStream(el) {
+  let all = document.querySelectorAll('.live-box');
+  all.forEach(box => {
+    box.classList.remove('focused', 'minimized');
+  });
+  el.classList.add('focused');
+  all.forEach(box => {
+    if (box !== el) box.classList.add('minimized');
+  });
+}
+
+function resetFocus() {
+  let all = document.querySelectorAll('.live-box');
+  all.forEach(box => {
+    box.classList.remove('focused', 'minimized');
+  });
+}
+</script>
 </body>
 </html>
